Adapted for mobile

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
   <!-- this is our landing page -->
   <body>
 
-    <a id='link'href='about.html'> Pour en apprendre plus // To learn more </a>
+    <a id='link'href='about.html'> Apprenez-en plus // Learn more </a>
 
 <h1 id='headerFR'>(Nos) Histoires Exquises</h1>
 <h1 id='headerEN'>(Our) Exquisite Histories</h1>
