added prompt box

--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,10 @@
 <h1 id='headerEN'>(Our) Exquisite Histories</h1>
 
 
+  <div id="prompt_box">
+    prompt: <span id="prompt_text_output"></span>
+  </div>
+
 <div id='inputDiv'>
       <input id="TopButton" class="Button" type="submit" value='Enregistrer  Record' onclick="RecordButtonPressed()"></input><br>
       <textarea id="TextInput"> Contribuez ici // Contribute here </textarea><br>
