Stylized prompt and added modal confirming submission

--- a/public/index.html
+++ b/public/index.html
@@ -1,46 +1,59 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title> (Nos) Histoires Exquises </title>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- CSS -->
-    <link rel="stylesheet" href="css/styles.css">
+  <title> (Nos) Histoires Exquises </title>
 
-    <!-- JS -->
-    <script src="/socket.io/socket.io.js"></script>
-    <script src="js/script.js"></script>
-    <script src="js/recording.js"></script>
-  </head>
+  <!-- CSS -->
+  <link rel="stylesheet" href="css/styles.css">
 
-
-
-  <!-- this is our landing page -->
-  <body>
-
-    <a id='link'href='about.html'> Apprenez-en plus // Learn more </a>
-
-<h1 id='headerFR'>(Nos) Histoires Exquises</h1>
-<h1 id='headerEN'>(Our) Exquisite Histories</h1>
+  <!-- JS -->
+  <script src="/socket.io/socket.io.js"></script>
+  <script src="js/script.js"></script>
+  <script src="js/recording.js"></script>
+</head>
 
 
-  <div id="prompt_box">
-    prompt: <span id="prompt_text_output"></span>
+
+<!-- this is our landing page -->
+
+<body>
+
+  <a id='link' href='about.html'> Apprenez-en plus // Learn more </a>
+
+  <h1 id='headerFR'>(Nos) Histoires Exquises</h1>
+  <h1 id='headerEN'>(Our) Exquisite Histories</h1>
+
+  <div id="instructionsDiv">
+    <h3> Continuez l'histoire en repondant a cette phrase de la personne precedente // Continue the story by answering this prompt from the previous participant:</h3>
+    <div id="prompt_box">
+      <span id="prompt_text_output"></span>
+    </div>
+    <h3> Enregistrez votre voix, ou contribuez par texte // Record your voice or contribute by writing</h3>
   </div>
 
-<div id='inputDiv'>
-      <input id="TopButton" class="Button" type="submit" value='Enregistrer  Record' onclick="RecordButtonPressed()"></input><br>
-      <textarea id="TextInput"> Contribuez ici // Contribute here </textarea><br>
-      <input id="BottomButton" class="Button" type="submit" value="Send transcript" onclick="SendButtonPressed()"></input>
+  <div id='inputDiv'>
+    <input id="TopButton" class="Button" type="submit" value='Enregistrer  Record' onclick="RecordButtonPressed()"></input><br>
+    <textarea id="TextInput"> Contribuez ici // Contribute here </textarea><br>
+    <input id="BottomButton" class="Button" type="submit" value="Send // Envoyer" onclick="SendButtonPressed()"></input>
 
-      <!-- for audio recording -->
-      <audio></audio>
+    <!-- for audio recording -->
+    <audio></audio>
 
+  </div>
+
+  <div id="success_modal">
+    <div>
+      <p>Merci pour votre contribution! Gardez un oeuil sur la projection pour y trouver votre phrase.</p>
+      <p>Thank you for contributing! Look out for your phrase on the building projection.</p>
+      <input id="OKButton" class="Button" type="submit" value='OK' onclick="OKButtonPressed()"></input><br>
     </div>
-  </body>
-  <!-- brap -->
+  </div>
+</body>
+<!-- brap -->
 
 
 
