english and french text are now in separate webpages. Voice recognition language changes accordingly.

--- a/public/about.html
+++ b/public/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="fr" dir="ltr">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,10 +19,10 @@
 
   <!-- this is our about page -->
   <body>
-    <a id='aboutLink'href='index.html'> Retourner à la page principale // Return to home page </a>
+    <a id='aboutLink'href='index.html'> Retourner à la page principale</a>
+    <a id='aboutLink'href='en/about.html'> English </a>
 
 <h1 id='headerFR'>(Nos) Histoires Exquises</h1>
-<h1 id='headerEN'>(Our) Exquisite Histories</h1>
 
 <div id='textDiv'>
 
@@ -31,11 +31,6 @@
 Ce projet collectionne des contributions sous forme de texte et d’audio, via un ordinateur installé sur-place ou bien un interface Internet. Celles-ci sont transmises en texte et projetées au-dessus un fond de visuels généré à partir d’une archive d’images historiques du Québec et de Montréal.
 (Nos) Histoires Exquises demande comment nous pourrions comprendre et contribuer à la formation de narratives collectives, tout en maintenant leur caractère pluralité et hétérogénéité.</p></div><br>
 
-<div class='about'>
-<p class='aboutP aboutEN'>(Our) Exquisite Stories aims to create a space to collect and visualize the many stories and experiences which, along with the individuals who embody them, pass through and weave a place into being.
-The project collects text and audio contributions from the public via an on-site computer, or a web interface. These are transmitted into text and projected on a backdrop of visuals generated from an archive of historical images from Quebec and Montreal. Stories are layered in a palimpsest of historical and social encounter.
-(Our) exquisite histories aims to ask how we can understand and contribute to the formation of collective narratives, all while maintaining their plurality and heterogeneity.</p></div>
-</div>
   </body>
   <!-- brap -->
 
