--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="fr" dir="ltr">
 
 <head>
   <meta charset="utf-8">
@@ -22,23 +22,23 @@
 
 <body>
 
-  <a id='link' href='about.html'> Apprenez-en plus // Learn more </a>
+  <a id='link' href='about.html'> Apprenez-en plus</a>
+  <a id='aboutLink'href='en/index.html'> English </a>
 
   <h1 id='headerFR'>(Nos) Histoires Exquises</h1>
-  <h1 id='headerEN'>(Our) Exquisite Histories</h1>
 
   <div id="instructionsDiv">
-    <h3> Continuez l'histoire en repondant a cette phrase de la personne precedente // Continue the story by answering this prompt from the previous participant:</h3>
+    <h3> Continuez l'histoire en repondant a cette phrase de la personne precedente: </h3>
     <div id="prompt_box">
       <span id="prompt_text_output"></span>
     </div>
-    <h3> Enregistrez votre voix, ou contribuez par texte // Record your voice or contribute by writing</h3>
+    <h3> Enregistrez votre voix, ou contribuez par texte</h3>
   </div>
 
   <div id='inputDiv'>
-    <input id="TopButton" class="Button" type="submit" value='Enregistrer  Record' onclick="RecordButtonPressed()"></input><br>
-    <textarea id="TextInput"> Contribuez ici // Contribute here </textarea><br>
-    <input id="BottomButton" class="Button" type="submit" value="Send // Envoyer" onclick="SendButtonPressed()"></input>
+    <input id="TopButton" class="Button" type="submit" value='Enregistrer' onclick="RecordButtonPressed('fr-FR')"></input><br>
+    <textarea id="TextInput"> Contribuez ici</textarea><br>
+    <input id="BottomButton" class="Button" type="submit" value="Envoyer" onclick="SendButtonPressed()"></input>
 
     <!-- for audio recording -->
     <audio></audio>
@@ -48,7 +48,6 @@
   <div id="success_modal">
     <div>
       <p>Merci pour votre contribution! Gardez un oeuil sur la projection pour y trouver votre phrase.</p>
-      <p>Thank you for contributing! Look out for your phrase on the building projection.</p>
       <input id="OKButton" class="Button" type="submit" value='OK' onclick="OKButtonPressed()"></input><br>
     </div>
   </div>
