Corrected one typo, took italics off english about page

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
 
 <body>
 
-  <a id='link' href='about.html'> Apprenez-en plus</a>
+  <a id='link' href='about.html'> Apprennez-en plus</a>
   <a id='aboutLink'href='en/index.html'> English </a>
 
   <h1 id='headerFR'>(Nos) Histoires Exquises</h1>
